--- a/Bioskop/src/main/webapp/css/Adminpanel.css
+++ b/Bioskop/src/main/webapp/css/Adminpanel.css
@@ -1,4 +1,8 @@
 /* The side navigation menu */
+html, body {
+	height:100%;
+	
+}
 .sidenav {
   height: 100%;
   width: 200px;
@@ -19,7 +23,7 @@
 
 /* The navigation menu links */
 .sidenav a {
-    padding: 8px 8px 8px 32px;
+    padding: 4px 4px 4px 16px;
     text-decoration: none;
     font-size: 25px;
     display: block;
