--- a/Bioskop/src/main/webapp/css/bootstrapTabs.css
+++ b/Bioskop/src/main/webapp/css/bootstrapTabs.css
@@ -7,6 +7,13 @@ height: 500px;
 background: #fff;
 /*box-shadow: 10px 10px #ccc,-10px 20px #ddd;*/
 }
+.modal-backdrop {
+    z-index: -1 !important;
+}
+.modal-dialog {
+    margin: 2px auto;
+    z-index: 1100 !important;
+}
 .board .nav-tabs {
     position: relative;
     /* border-bottom: 0; */
